--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This will give you lots of fun like jokes and sentence analysis.",
   "main": "./bin/fun.js",
   "bin": {
-    "fun_packet": "./bin/fun.js"
+    "fun": "./bin/fun.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
