--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "fun_packet",
-  "version": "1.0.0",
+  "version": "1.0.3",
   "description": "This will give you lots of fun like jokes and sentence analysis.",
   "main": "./bin/fun.js",
   "bin": {
-    "fun_packet": "./bin/fun.js"
+    "fun": "./bin/fun.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
