--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fun_packet",
-  "version": "1.0.3",
+  "version": "1.3.1",
   "description": "This will give you lots of fun like jokes and sentence analysis.",
   "main": "./bin/fun.js",
   "bin": {
@@ -9,7 +9,6 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Rupeshiya/FunPacketCli.git"
@@ -23,7 +22,9 @@
     "cfonts": "^2.1.3",
     "colors": "^1.3.0",
     "express": "^4.16.3",
+    "os": "^0.1.1",
     "paralleldots": "^3.1.1",
+    "request": "^2.87.0",
     "yargs": "^11.0.0"
   },
   "bugs": {
