--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "engines": {
+    "node": "10.6.0"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Rupeshiya/FunPacketCli.git"
