--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fun_packet",
-  "version": "1.3.1",
+  "version": "1.3.7",
   "description": "This will give you lots of fun like jokes and sentence analysis.",
   "main": "./bin/fun.js",
   "bin": {
@@ -8,6 +8,9 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "engines":{
+    "node": "10.6.0"
   },
   "repository": {
     "type": "git",
